--- a/index.html
+++ b/index.html
@@ -4,7 +4,16 @@
 
     <style type="text/css">
       html, body, #map-canvas { height: 100%; margin: 0; padding: 0;}
+
     </style>
+	<style>
+.menu{
+	  height:100%;
+	  position:fixed;
+	  left:-285;
+	  width:200px;
+	  }
+	</style>
 
     <script type="text/javascript"
       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBDRSVWu9oi1FM3-0eFO65UcHahQGPqoC4">
@@ -110,11 +119,36 @@
         initialize();
         populateMap();
       });
+	var menu_function = function() {
+	  /* Push the body and the nav over by 285px over */
+	  $('.icon-menu').click(function() {
+		$('.menu').animate({
+		  left: "0px"
+		}, 200);
 
+		$('body').animate({
+		  left: "285px"
+		}, 200);
+	  });
+
+	  /* Then push them back */
+	  $('.icon-close').click(function() {
+		$('.menu').animate({
+		  left: "-285px"
+		}, 200);
+
+		$('body').animate({
+		  left: "0px"
+		}, 200);
+	  });
+	};
+
+
+	$(document).ready(menu_function);
    </script>
   </head>
   <body>
-  HI NOOB
+	<div class="menu"></div>
       <div id="map-canvas"></div>
   </body>
 </html>
