--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 .menu{
 	  height:100%;
 	  position:fixed;
-	  left:-285;
-	  width:200px;
+	  left:-285px;
+	  width:285px;
 	  }
 	</style>
 
@@ -148,7 +148,12 @@
    </script>
   </head>
   <body>
-	<div class="menu"></div>
-      <div id="map-canvas"></div>
+	<div class : "webpagehead">
+		<p class='icon-menu'>SOFT SKILLS</p>
+	</div>
+	<div class="menu">
+		<p class='icon-close'> HUEHUEHUE </p>
+	</div>
+    <div id="map-canvas"></div>
   </body>
 </html>
