--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </script>
 
     <script src="//www.parsecdn.com/js/parse-1.4.0.min.js"></script>
-
+	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script type="text/javascript">
 
       Parse.initialize("wFFZue6UImviqCkCtBlLazQ51N39l3TUy04u2i8l", "hyPckU5KOyjTh2AZPdKs1zUYSYlAkbcHC3XC0gOz");
@@ -151,12 +151,12 @@
   	<div class="menu">
 		<p class='icon-close'> HUEHUEHUE </p>
 	</div>
-	<div>
-		<div class : "webpagehead">
-			<p class='icon-menu'>SOFT SKILLS</p>
-		</div>
 
-		<div id="map-canvas"></div>
+	<div class : "webpagehead">
+		<p class='icon-menu'>SOFT SKILLS</p>
 	</div>
+
+	<div id="map-canvas"></div>
+
   </body>
 </html>
