--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <script type="text/javascript"
       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBDRSVWu9oi1FM3-0eFO65UcHahQGPqoC4">
     </script>
-
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
     <script src="//www.parsecdn.com/js/parse-1.4.0.min.js"></script>
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script type="text/javascript">
@@ -126,7 +126,7 @@
 		  left: "0px"
 		}, 200);
 
-		$('body').animate({
+		$('#map-canvas').animate({
 		  left: "285px"
 		}, 200);
 	  });
@@ -137,7 +137,7 @@
 		  left: "-285px"
 		}, 200);
 
-		$('body').animate({
+		$('#map-canvas').animate({
 		  left: "0px"
 		}, 200);
 	  });
@@ -148,14 +148,41 @@
    </script>
   </head>
   <body>
-  	<div class="menu">
-		<p class='icon-close'> HUEHUEHUE </p>
-	</div>
+  
 
 	<div class : "webpagehead">
 		<p class='icon-menu'>SOFT SKILLS</p>
 	</div>
+	<div class="menu">
+		<p class='icon-close'> HUEHUEHUE </p>
+		
+		
+		
+		<form>
+		<div class="form-group">
+    <label for="InputName">Enter your Name :</label>
+    <input type="text" class="form-control" id="InputName" placeholder="">
+  </div>
+  <div class="form-group">
+    <label for="InputPost">Enter your post :</label>
+    <input type="text" class="form-control" id="InputPost" placeholder="">
+  </div>
+  <div class="form-group">
+    <label for="exampleInputFile">Choose an Image:</label>
+    <input type="file" id="exampleInputFile">
 
+  </div>
+  <div class="checkbox">
+    <label>
+      <input type="checkbox"> 18 +
+    </label>
+  </div>
+  <button type="submit" class="btn btn-default">Submit</button>
+</form>
+
+
+
+	</div>
 	<div id="map-canvas"></div>
 
   </body>
