--- a/index.html
+++ b/index.html
@@ -5,8 +5,6 @@
     <style type="text/css">
       html, body, #map-canvas { height: 100%; margin: 0; padding: 0;}
 
-    </style>
-	<style>
 .menu{
 	  height:100%;
 	  position:fixed;
@@ -22,7 +20,7 @@
     <script src="//www.parsecdn.com/js/parse-1.4.0.min.js"></script>
     <script type=text/javascript src="JS/Markers.js"></script>
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-	<script>
+	<script type=test/javascript>
 	var main = function() {
 	  /* Push the body and the nav over by 285px over */
 	  $('.icon-menu').click(function() {
@@ -46,7 +44,8 @@
 		}, 200);
 	  });
 	};
-	</script>
+$(document).ready(main);
+</script>
   </head>
   <body>
 
