--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
     <script src="//www.parsecdn.com/js/parse-1.4.0.min.js"></script>
     <script type=text/javascript src="JS/Markers.js"></script>
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-	<script type=test/javascript>
+    <script type="text/javascript">
+
+      
 	var main = function() {
 	  /* Push the body and the nav over by 285px over */
 	  $('.icon-menu').click(function() {
@@ -44,8 +46,10 @@
 		}, 200);
 	  });
 	};
-$(document).ready(main);
-</script>
+
+
+	$(document).ready(main);
+   </script>
   </head>
   <body>
 
