--- a/index.html
+++ b/index.html
@@ -1,93 +1,138 @@
 <!DOCTYPE html>
 <html>
-  <head>
+	<head>
 
-    <style type="text/css">
-      html, body, #map-canvas { height: 100%; margin: 0; padding: 0;}
+		<style type="text/css">
+		  html, body, #map-canvas { height: 100%; margin: 0; padding: 0;}
 
-.menu{
-	  height:100%;
-	  position:fixed;
-	  left:-285px;
-	  width:285px;
-	  }
-	</style>
+	.menu{
+		  height:100%;
+		  position:fixed;
+		  left:-285px;
+		  width:285px;
+		  }
+		
+		</style>
 
-    <script type="text/javascript"
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBDRSVWu9oi1FM3-0eFO65UcHahQGPqoC4">
-    </script>
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
-    <script src="//www.parsecdn.com/js/parse-1.4.0.min.js"></script>
-    <script type=text/javascript src="JS/Markers.js"></script>
-	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-    <script type="text/javascript">
+		<script type="text/javascript"
+		  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBDRSVWu9oi1FM3-0eFO65UcHahQGPqoC4">
+		</script>
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+		<script src="//www.parsecdn.com/js/parse-1.4.0.min.js"></script>
+		<script type=text/javascript src="JS/Markers.js"></script>
+		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+		<script type=text/javascript>
+			var main = function() {
+			  /* Push the body and the nav over by 285px over */
+			  $('.icon-menu').click(function() {
+				$('#main_menu').animate({
+				  left: "0px"
+				}, 200);
 
-      
-	var main = function() {
-	  /* Push the body and the nav over by 285px over */
-	  $('.icon-menu').click(function() {
-		$('.menu').animate({
-		  left: "0px"
-		}, 200);
+				$('#map-canvas').animate({
+				  left: "285px"
+				}, 200);
+			  });
 
-		$('#map-canvas').animate({
-		  left: "285px"
-		}, 200);
-	  });
+			  /* Then push them back */
+			  $('.icon-close').click(function() {
+				$('#main_menu').animate({
+				  left: "-285px"
+				}, 200);
 
-	  /* Then push them back */
-	  $('.icon-close').click(function() {
-		$('.menu').animate({
-		  left: "-285px"
-		}, 200);
+				$('#map-canvas').animate({
+				  left: "0px"
+				}, 200);
+			  });
+			
+			  /* Push the body and the nav over by 285px over */
+			  $('.mainmenu_dropapin').click(function() {
+				$('#submit_menu').animate({
+				  left: "0px"
+				}, 200);
+				$('#main_menu').animate({
+				  left: "-285px"
+				}, 200);
+			});
 
-		$('#map-canvas').animate({
-		  left: "0px"
-		}, 200);
-	  });
-	};
+			  /* Then push them back */
+			  $('.submit-close').click(function() {
+				$('#submit_menu').animate({
+				  left: "-285px"
+				}, 200);
+				$('#main_menu').animate({
+				  left: "0px"
+				}, 200);
+			});
+			  $('.mainmenu_about').click(function() {
+				$('#about_menu').animate({
+				  left: "0px"
+				}, 200);
+				$('#main_menu').animate({
+				  left: "-285px"
+				}, 200);
+			});
 
-
-	$(document).ready(main);
-   </script>
-  </head>
-  <body>
-
-
-	<div class : "webpagehead">
-		<p class='icon-menu'>SOFT SKILLS</p>
-	</div>
-	<div class="menu">
-		<p class='icon-close'> HUEHUEHUE </p>
-
-
-
-		<form>
-		<div class="form-group">
-    <label for="InputName">Enter your Name :</label>
-    <input type="text" class="form-control" id="InputName" placeholder="">
-  </div>
-  <div class="form-group">
-    <label for="InputPost">Enter your post :</label>
-    <input type="text" class="form-control" id="InputPost" placeholder="">
-  </div>
-  <div class="form-group">
-    <label for="exampleInputFile">Choose an Image:</label>
-    <input type="file" id="exampleInputFile">
-
-  </div>
-  <div class="checkbox">
-    <label>
-      <input type="checkbox"> 18 +
-    </label>
-  </div>
-  <button type="submit" class="btn btn-default">Submit</button>
-</form>
+			  /* Then push them back */
+			  $('.about-close').click(function() {
+				$('#about_menu').animate({
+				  left: "-285px"
+				}, 200);
+				$('#main_menu').animate({
+				  left: "0px"
+				}, 200);
+			});
+			};
+			$(document).ready(main);
+		</script>
 
 
+		
+	</head>
+	<body>
 
-	</div>
-	<div id="map-canvas"></div>
 
-  </body>
+		<div class : "webpagehead">
+			<p class='icon-menu'>SOFT SKILLS</p>
+		</div>
+		
+		<div class ="menu" id="main_menu">
+			<p class="icon BS"> icon</p>
+			<p class='icon-close'> CLOSE </p>
+			<div class ="mainmenu_dropapin"> DROP A PIN </div>
+			<div class="mainmenu_about"> About </div>
+			<div class="mainmenu_blabla"> Blablabla </div>
+		</div>
+		
+		<div class ="menu" id="submit_menu">
+			<p class='submit-close'> CLOSE </p>
+			<form>
+				<div class="form-group">
+					<label for="InputName">Name :</label>
+					<input type="text" class="form-control" id="InputName" placeholder="">
+				</div>
+				<div class="form-group">
+					<label for="InputPost">Text :</label>
+					<input type="text" class="form-control" id="InputPost" placeholder="">
+				</div>
+				<div class="form-group">
+					<label for="exampleInputFile">Choose an Image:</label>
+					<input type="file" id="exampleInputFile">
+
+				</div>
+				<button type="submit" class="btn btn-default">Submit</button>
+			</form>
+		</div>
+		
+		
+		<div class ="menu" id="about_menu">
+			<p class="icon BS"> icon</p>
+			<p class='about-close'> CLOSE </p>
+
+		</div>
+		
+		
+		<div id="map-canvas"></div>
+
+	</body>
 </html>
