--- a/index.html
+++ b/index.html
@@ -75,6 +75,24 @@
 				  left: "0px"
 				}, 200);
 			});
+				$('#mainmenublabla').click(function() {
+				$('#blablamenu').animate({
+				  left: "0px"
+				}, 200);
+				$('#mainmenu').animate({
+				  left: "-285px"
+				}, 200);
+			});
+
+			  /* Then push them back */
+			  $('#blablaclose').click(function() {
+				$('#blablamenu').animate({
+				  left: "-285px"
+				}, 200);
+				$('#mainmenu').animate({
+				  left: "0px"
+				}, 200);
+			});
 			};
 			$(document).ready(main);
 		</script>
@@ -105,7 +123,7 @@
 				<img class="iconBS" src="resources/NINJAS/Ninja1.jpg" />
 				<img class="close" id='submitclose' src="resources/icons/18_Close-128.png" />
 			</div>
-			<form>
+			<form class="drop_a_pin_form">
 				<div style={margin=10px; padding= 10px;}
 					<div class="form-group">
 						<label for="InputName">Name :</label>
@@ -113,7 +131,7 @@
 					</div>
 					<div class="form-group">
 						<label for="InputPost">Text :</label>
-						<input type="text" class="form-control" id="InputPost" placeholder="">
+						<textarea class="form-control" id="InputPost"rows="5"></textarea>
 					</div>
 					<div class="form-group">
 						<label for="exampleInputFile">Choose an Image:</label>
@@ -131,8 +149,28 @@
 				<img class="close" id='aboutclose' src="resources/icons/18_Close-128.png" /> 
 
 			</div>
+				<div class="aboutcontent">
+				Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+				labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
+				nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui
+				officia deserunt mollit anim id est laborum.				
+				</div>
 		</div>
-		
+		<div class ="menu" id="blablamenu">
+			<div class="menuheader">
+				<img class="iconBS" src="resources/NINJAS/Ninja1.jpg" />
+				<img class="close" id='blablaclose' src="resources/icons/18_Close-128.png" /> 
+
+			</div>
+				<div class="blablacontent">
+				
+					<p class="blablabla">BLABLABLA</p>
+					</br></br></br></br></br></br></br></br></br></br>
+					<p class="blablabla">BLABLABLA</p>
+				
+				</div>
+		</div>
 		<div id="map-canvas"></div>
 
 	</body>
