Image to database done
ffdfdsfd

--- a/index.html
+++ b/index.html
@@ -134,11 +134,11 @@
 						<textarea class="form-control" id="InputPost"rows="5"></textarea>
 					</div>
 					<div class="form-group">
-						<label for="exampleInputFile">Choose an Image:</label>
-						<input type="file" id="exampleInputFile">
+						<label for="InputFile">Choose an Image:</label>
+						<input type="file" id="InputFile">
 
 					</div>
-				<button type="submit" class="btn btn-default">Submit</button
+				<button type="button" class="btn btn-default" onclick="getMenuItems()">Submit</button
 				</div>
 			</form>
 		</div>
