--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 				  left: "0px"
 				}, 200);
 				$('#icon_main_menu').animate({
-				  left: "285px"
+				  left: "-285px"
 				}, 200);
 				$('#map-canvas').animate({
 				  left: "285px"
@@ -104,7 +104,7 @@
 
 
 		<div class = "page_header">
-			<p id="icon_main_menu"><img src="resources/icons/menu-alt-64.png" style={float:left; }/> MENU</p>
+			<p id="icon_main_menu"><img src="resources/icons/arrow-alt-right.png" style={float:left;}/> MENU</p>
 			<p class='maintitle'>SOFT SKILLS</p>
 		</div>
 
@@ -134,8 +134,8 @@
 						<textarea class="form-control" id="InputPost"rows="5"></textarea>
 					</div>
 					<div class="form-group">
-						<label for="exampleInputFile">Choose an Image:</label>
-						<input type="file" id="exampleInputFile">
+						<label for="InputFile">Choose an Image:</label>
+						<input type="file" id="InputFile">
 
 					</div>
 				<button type="submit" class="btn btn-default">Submit</button
