--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 						<input type="file" id="InputFile">
 
 					</div>
-				<button type="button" class="btn btn-default" onclick="getMenuItems()">Submit</button
+				<button type="button" class="btn btn-default" onclick="getMenuItems()">Submit</button>
 				</div>
 			</form>
 		</div>
