--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 
 		<div class = "page_header">
 			<p id="icon_main_menu"><img src="resources/icons/arrow-alt-right.png" style={float:left;}/> MENU</p>
-			<p class='maintitle'>SOFT SKILLS</p>
+			<p class='maintitle'>GLOBAL DIARY</p>
 		</div>
 
 		<div class ="menu" id="mainmenu">
