--- a/index.html
+++ b/index.html
@@ -124,8 +124,9 @@
 
 		<div class ="menu" id="mainmenu">
 			<div class="menuheader">
-				<img class="iconBS" src="resources/NINJAS/Ninja1.jpg" />
-				<img class="close" id='iconclose' src="resources/icons/18_Close-128.png" />
+			
+				<img class="iclose" id='iconclose' src="resources/icons/18_Close-128.png" />
+				<img class="iconBS" src="resources/icons/softskillsicon.jpg" />
 			</div>
 			<div class ="menucontent" id ="mainmenudropapin"> DROP A PIN </div>
 			<div class ="menucontent" id="mainmenuabout"> About </div>
@@ -134,8 +135,8 @@
 
 		<div class ="menu" id="submitmenu">
 			<div class="menuheader">
-				<img class="iconBS" src="resources/NINJAS/Ninja1.jpg" />
-				<img class="close" id='submitclose' src="resources/icons/18_Close-128.png" />
+				<img class="iclose" id='submitclose' src="resources/icons/18_Close-128.png" />
+				<img class="iconBS" src="resources/icons/softskillsicon.jpg" />
 			</div>
 			<form class="drop_a_pin_form">
 				<div style={margin=10px; padding= 10px;}
@@ -159,9 +160,9 @@
 
 		<div class ="menu" id="aboutmenu">
 			<div class="menuheader">
-				<img class="iconBS" src="resources/NINJAS/Ninja1.jpg" />
-				<img class="close" id='aboutclose' src="resources/icons/18_Close-128.png" />
-
+			
+				<img class="iclose" id='aboutclose' src="resources/icons/18_Close-128.png" />
+				<img class="iconBS" src="resources/icons/softskillsicon.jpg" />
 			</div>
 				<div class="aboutcontent">
 				Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
@@ -173,8 +174,9 @@
 		</div>
 		<div class ="menu" id="blablamenu">
 			<div class="menuheader">
-				<img class="iconBS" src="resources/NINJAS/Ninja1.jpg" />
-				<img class="close" id='blablaclose' src="resources/icons/18_Close-128.png" />
+				
+				<img class="iclose" id='blablaclose' src="resources/icons/18_Close-128.png" />
+				<img class="iconBS" src="resources/icons/softskillsicon.jpg" />
 
 			</div>
 				<div class="blablacontent">
