about page commit

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 
 		<div class ="menu" id="mainmenu">
 			<div class="menuheader">
-			
+
 				<img class="iclose" id='iconclose' src="resources/icons/18_Close-128.png" />
 				<img class="iconBS" src="resources/icons/softskillsicon.jpg" />
 			</div>
@@ -161,21 +161,39 @@
 
 		<div class ="menu" id="aboutmenu">
 			<div class="menuheader">
-			
+
 				<img class="iclose" id='aboutclose' src="resources/icons/18_Close-128.png" />
 				<img class="iconBS" src="resources/icons/softskillsicon.jpg" />
 			</div>
 				<div class="aboutcontent">
-				Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-				labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
-				nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui
-				officia deserunt mollit anim id est laborum.
+					Welcome to the Global Diary! This is a website that we've designed
+					in our multimedia programming course at California State University,
+					Monterey Bay. As two students whom have studied abroad in our time in college,
+					we've built this site to allow people to connect from around the globe by creating
+					diary entries with a picture from your area or related to your diary post to share with the world!
 				</div>
+				<div class="aboutcontent">
+					<b>1)</b> Type your name (leave blank and Anonymous will be placed if you do not wish to expose your identity).
+					</br>
+					<b>2)</b> Type out a well formed diary post, be as personal or private as you wish!
+					</br>
+					<b>3)</b> Select a picture. (JPG / JPEG)
+					</br>
+					<b>4)</b> Make sure you are using a browser with access to your current location.
+					</br>
+					<b>5)</b> Submit!
+					</br>
+					</br>
+					Upvotes and Downvotes can be given accordingly, a score of <em><b>-20</b></em> will remove your
+					diary entry so please be mindful of the pictures and content you post.
+				</div>
+
+
+
 		</div>
 		<div class ="menu" id="blablamenu">
 			<div class="menuheader">
-				
+
 				<img class="iclose" id='blablaclose' src="resources/icons/18_Close-128.png" />
 				<img class="iconBS" src="resources/icons/softskillsicon.jpg" />
 
