--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 			<div class ="menucontent" id ="mainmenudropapin"> DROP A PIN </div>
 			<div class ="menucontent" id="mainmenuabout"> About </div>
 			<div class ="menucontent" id="mainmenublabla"> Blablabla </div>
-			<p class ="copyright"> Hemion &#38; Bichay 2016 &#169; Soft skills Production</p>
+			<p class ="copyright"> Hemion &#38; Bichay 2016 &#169; Soft Skills Production</p>
 		</div>
 
 		<div class ="menu" id="submitmenu">
