--- a/index.html
+++ b/index.html
@@ -182,9 +182,21 @@
 			</div>
 				<div class="blablacontent">
 
-					<p class="blablabla">BLABLABLA</p>
-					</br></br></br></br></br></br></br></br></br></br>
-					<p class="blablabla">BLABLABLA</p>
+					<div class="blablabla">
+						<img src= "resources/fessebouc/11210359_10205828918355177_517644761_n.jpg" />
+						<p>
+							Hey! I’m a 3rd year student here at California State University, Monterey Bay. I am a in Software Engineering & Japanese
+							Language major and want to use my programming abilities to help connect people all around the world.
+						</p>
+					</div>
+					</br></br></br>
+					<div class="blablabla">
+						<img src= "resources/fessebouc/11186400_10205828918315176_642959319_n.jpg" />
+						<p>
+							Hello there! My name is not Maxime, I am a French exchange student studying abroad in California 
+							State University, Monterey Bay! I am passionate about international globalization and intercultural communication.
+						</p>
+					</div>
 
 				</div>
 		</div>
