--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 			<div class ="menucontent" id="mainmenuabout"> About </div>
 			<div class ="menucontent" id="mainmenublabla"> Developers </div>
 			<div class ="menucontent" id="copyright"> Hemion &#38; Bichay 2016 &#169; Soft Skills Production</div>
-			<div class ="menucontent" > 
+			<div class ="logobox" > 
 				<img class="logoimg" src="resources/logos/mapsapibanner.png" style={float=left;}/> 
 				<img class="logoimg" src="resources/logos/imgur.jpg"/> 
 				<br/>
